# aragon-r0-voting-protocol

./: .gitmodules  Cargo.toml  foundry.toml  remappings.txt  test-local-deployment.sh  test-sepolia.sh
apps/: Cargo.toml
apps/src/: delegation_strategies.rs  lib.rs  voting_power_strategies.rs
apps/src/delegation_strategies/: split_delegation.rs
apps/src/voting_power_strategies/: balance_of.rs  get_past_votes.rs
contracts/: Counter.sol  ERC20.sol  IMajorityVoting.sol  MajorityVotingBase.sol  RiscVotingProtocolConfig.sol  RiscVotingProtocolPlugin.sol  RiscVotingProtocolPluginSetup.sol
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
script/: DeployCounter.s.sol  ProdDeployCounter.s.sol  RiscVotingProtocolConfig.txt
server/: Cargo.toml
server/src/: main.rs
strategies/: Cargo.toml
strategies/src/: delegation_strategies.rs  execution_strategies.rs  lib.rs  voting_strategies.rs
strategies/src/delegation_strategies/: split_delegation.rs
strategies/src/execution_strategies/: majority_voting.rs
strategies/src/voting_strategies/: balance_of.rs  get_past_votes.rs
