[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
