[package]
name = "strategies"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
serde_json = "1.0.125"
serde = "1.0.208"
anyhow = { workspace = true }
