[package]
name = "aragon-zk-voting-protocol-guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voting_protocol"
path = "src/bin/voting_protocol.rs"

[[bin]]
name = "execution_protocol"
path = "src/bin/execution_protocol.rs"

[workspace]

[dependencies]
# Force the `compile-time-rng` feature, to prevent `getrandom` from being used.
ahash = { version = "0.8", default-features = false, features = [
    "compile-time-rng",
] }
alloy-primitives = { version = "0.8", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.8" }
#risc0-steel = { path = "../../../../steel" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ["std"] }
serde_json = "1.0.125"
serde = "1.0.208"
strategies = { path = "../../strategies" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13.3", features = [
    "arithmetic",
    "serde",
    "expose-field",
    "std",
    "ecdsa",
], default-features = false }
hex = "0.4.3"


[patch.crates-io]
# use optimized risc0 circuit
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
